# Arcade-Board-ADC

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
config/: gpio_output_config.h
config/CD74HC4067SM96/: CD74HC4067SM96_00_config.h  CD74HC4067SM96_01_config.h  CD74HC4067SM96_02_config.h  CD74HC4067SM96_03_config.h  CD74HC4067SM96_gpio_selector.h  CD74HC4067SM96_input_00_config.h  CD74HC4067SM96_input_01_config.h  CD74HC4067SM96_input_gpio_selector.h  CD74HC4067SM96_output_00_config.h  CD74HC4067SM96_output_01_config.h  CD74HC4067SM96_output_gpio_selector.h
drivers/: CMakeLists.txt
drivers/CD74HC4067SM96/: CD74HC4067SM96.cpp  CD74HC4067SM96.h  CMakeLists.txt
hardware/kicad/: HallEffectSwitchADC.kicad_pcb  HallEffectSwitchADC.kicad_prl  HallEffectSwitchADC.kicad_pro  HallEffectSwitchADC.kicad_sch  HallEffectSwitchADC.kicad_sch-bak  fp-info-cache
hardware/kicad/libs/easyeda/: easyeda.bak  easyeda.kicad_sym
hardware/kicad/libs/easyeda/easyeda.3dshapes/: CONN-TH_5P-P2.54_MX128-2.54-05P-GN01-CU-Y-A.step  SW-SMD_6P-L7.2-W3.5-P2.50-LS6.0-TL.step  SW-SMD_6P-L7.2-W3.5-P2.50-LS6.0-TL.wrl
hardware/kicad/libs/easyeda/easyeda.pretty/: C0402.kicad_mod  CONN-TH_5P-P2.54_MX128-2.54-05P-GN01-CU-Y-A.kicad_mod  CRYSTAL-SMD_4P-L2.5-W2.0-BL.kicad_mod  F0805.kicad_mod  LQFN-56_L7.0-W7.0-P0.4-EP.kicad_mod  R0402.kicad_mod  SOIC-8_L5.3-W5.3-P1.27-LS8.0-BL.kicad_mod  SOP-16_L10.0-W3.9-P1.27-LS6.0-BL.kicad_mod  SOT-23-5_L3.0-W1.7-P0.95-LS2.8-BR.kicad_mod  SW-SMD_4P-L3.6-W3.0-P1.50-LS4.7.kicad_mod  SW-SMD_4P-L6.2-W6.2-P4.50-LS8.5.kicad_mod  SW-SMD_6P-L7.2-W3.5-P2.50-LS6.0-TL.kicad_mod  USB-A-TH_AF-10.0-HC6.3.kicad_mod  USB-C_SMD-TYPE-C-31-M-12.kicad_mod
hardware/production_files/: BOM-HallEffectSwitchADC.csv  CPL-HallEffectSwitchADC.csv
helpers/: Gamepad.h  GpioManager.h  enums.h
libs/sma_filter/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
